removed wanings